Update the Eclipse task so that it generates content to the right place is is not referencing any specialic transit protocol handler.